# VastuAudit.ai

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260502_0900_0001_initial.py
apps/api/src/: __init__.py  config.py  database.py  main.py  redis_client.py
apps/api/src/api/: deps.py
apps/api/src/api/v1/: __init__.py  audits.py  auth.py  health.py
apps/api/src/models/: __init__.py  audit.py  base.py  user.py
apps/api/src/schemas/: audit.py  user.py
apps/api/src/utils/: logging.py
apps/api/src/workers/: __init__.py  rq_worker.py
apps/api/tests/: test_health.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  railway.json
apps/web/src/: instrumentation.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
prototype-deploy/: .gitignore  README.md  package.json  railway.json
roadmap/: status.md
ux/: design-system.md  handoff-to-claude-code.md  prototype.html
